--- a/src/pages/styles/PatientFollowup.css
+++ b/src/pages/styles/PatientFollowup.css
@@ -1,40 +1,55 @@
 .full {
-    display: flex;
-    flex-direction: column;
-    height: 100vh;
-  }
-  
-  .box {
-    display: flex;
-    flex: 1;
-  }
-  
-  .sidebar-box {
-    width: 200px;
-  }
-  
-  .content {
-    flex: 1;
-    padding: 20px;
-  }
-  
-  .patient-group {
-    margin-bottom: 20px;
-  }
-  
-  .consultas-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 10px;
-  }
-  
-  .consultas-table th, .consultas-table td {
-    border: 1px solid #ccc;
-    padding: 8px;
-    text-align: left;
-  }
-  
-  .consultas-table th {
-    background-color: #f2f2f2;
-  }
-  
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.box {
+  display: flex;
+  flex: 1;
+}
+
+.sidebar-box {
+  width: 200px;
+}
+
+.content {
+  flex: 1;
+  padding: 20px;
+}
+
+.patient-group {
+  margin-bottom: 20px;
+}
+
+.consultas-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.consultas-table th, .consultas-table td {
+  border: 1px solid #ccc;
+  padding: 8px;
+  text-align: left;
+}
+
+.consultas-table th {
+  background-color: #f2f2f2;
+}
+
+.medications-table {
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 10px;
+}
+
+.medications-table th, .medications-table td {
+  border: 1px solid #ccc;
+  padding: 4px;
+  text-align: left;
+}
+
+.medications-table th {
+  background-color: #e9e9e9;
+}
