--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,5 @@
 
 body {
     margin: 0; /* Remove default margin */
-    padding: 0; /* Remove default padding */
+    padding: 0; /* Remove default padding */background-color: rgb(248, 244, 244);
   }
