--- a/src/components/styles/TaskModal.css
+++ b/src/components/styles/TaskModal.css
@@ -4,37 +4,42 @@
   align-items: center;
   position: fixed;
   z-index: 1;
-  left: 0;
-  top: 0;
+  left: 50%;
+  top: 50%;
   width: 100%;
   height: 100%;
-  overflow: auto;
-  background-color: rgba(0,0,0,0.4);
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.04);
 }
 
 .modal-content {
   background-color: #fefefe;
-  margin: auto;
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
   max-width: 500px;
   border-radius: 10px;
   box-sizing: border-box;
+  position: relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-140%, -50%);
 }
 
 .close {
   color: #aaa;
-  float: right;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   font-size: 28px;
   font-weight: bold;
+  cursor: pointer;
 }
 
 .close:hover,
 .close:focus {
   color: black;
   text-decoration: none;
-  cursor: pointer;
 }
 
 .task-form {
@@ -48,7 +53,8 @@
   font-weight: bold;
 }
 
-.task-form input {
+.task-form input,
+.task-form select {
   padding: 10px;
   margin-bottom: 10px;
   border: 1px solid #ccc;
