--- a/src/pages/styles/Tasks.css
+++ b/src/pages/styles/Tasks.css
@@ -1,14 +1,11 @@
-.full {
-  font-family: Arial, sans-serif;
-}
-
-.content {
-  padding: 20px;
-}
-
 .task-card {
   transition: transform 0.3s, box-shadow 0.3s;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  min-height: 200px; /* Agregamos una altura mínima */
+  display: flex;
+  flex-direction: column; /* Asegura que el contenido se distribuya bien */
 }
 
 .task-card:hover {
@@ -16,14 +13,30 @@
   box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
 }
 
-.create-task-button {
-  margin-top: 20px;
-}
-
 .task-card .MuiCardContent-root {
-  background-color: #f5f5f5;
+  flex-grow: 1; /* Permite que el contenido crezca */
+  padding: 20px;
+  background-color: #ffffff;
 }
 
 .task-card .MuiCardActions-root {
-  background-color: #e3f2fd;
+  background-color: #f0f0f0;
+  padding: 10px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.task-card h5 {
+  font-size: 1.2rem;
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
+.task-card .MuiTypography-body2 {
+  font-size: 0.95rem;
+  margin-bottom: 5px;
+}
+
+.task-card .MuiTypography-body2 strong {
+  font-weight: bold;
 }
