--- a/src/pages/styles/SiteSelection.css
+++ b/src/pages/styles/SiteSelection.css
@@ -13,7 +13,7 @@ flex-direction: column;
 align-items: center;
 justify-content: center;
 color: #333;
-font-family: 'Arial', sans-serif;
+font-family: serif, sans-serif;
 padding-top: 100px;
 }
 
